--- a/newsletterTemplate.html
+++ b/newsletterTemplate.html
@@ -55,6 +55,7 @@
         outline: none;
         text-decoration: none;
         -ms-interpolation-mode: bicubic;
+        max-width: 100%;
       }
       p {
         display: block;
